First functional version of the theme, moved scss file to asset folder where it belongs.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,3 +1,6 @@
+---
+---
+
 @import 'libs/vars';
 @import 'libs/functions';
 @import 'libs/mixins';
@@ -583,6 +586,10 @@
 	}
 
 /* Image */
+
+	img {
+		max-width: 100%;
+	}
 
 	.image {
 		border-radius: _size(border-radius);
