--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -111,88 +111,12 @@
 			<!-- One -->
 			<section id="top">
 				<div class="image main" data-position="center">
-					<img src="images/banner.jpg" alt="" />
+					<img src="{{ page.banner | default: site.banner | default: '/images/banner.jpg' | relative_url }}" alt="" />
 				</div>
 				<div class="container">
-					<header class="major">
-						<h2>Read Only</h2>
-						<p>Just an incredibly simple responsive site<br />
-						template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
-					</header>
-					<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+					{{ content }}
 				</div>
 			</section>
-
-			<!-- Two -->
-			<section id="two">
-				<div class="container">
-					<h3>Things I Can Do</h3>
-					<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
-					<ul class="feature-icons">
-						<li class="fa-code">Write all the code</li>
-						<li class="fa-cubes">Stack small boxes</li>
-						<li class="fa-book">Read books and stuff</li>
-						<li class="fa-coffee">Drink much coffee</li>
-						<li class="fa-bolt">Lightning bolt</li>
-						<li class="fa-users">Shadow clone technique</li>
-					</ul>
-				</div>
-			</section>
-
-			<!-- Three -->
-			<section id="three">
-				<div class="container">
-					<h3>A Few Accomplishments</h3>
-					<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
-					<div class="features">
-						<article>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-							<div class="inner">
-								<h4>Possibly broke spacetime</h4>
-								<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
-							</div>
-						</article>
-						<article>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-							<div class="inner">
-								<h4>Terraformed a small moon</h4>
-								<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
-							</div>
-						</article>
-						<article>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-							<div class="inner">
-								<h4>Snapped dark matter in the wild</h4>
-								<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
-							</div>
-						</article>
-					</div>
-				</div>
-			</section>
-
-			<!-- Four -->
-			<section id="four">
-				<div class="container">
-					<h3>Contact Me</h3>
-					<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
-					<form method="post" action="#">
-						<div class="row gtr-uniform">
-							<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-							<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-							<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
-							<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
-							<div class="col-12">
-								<ul class="actions">
-									<li><input type="submit" class="primary" value="Send Message" /></li>
-									<li><input type="reset" value="Reset Form" /></li>
-								</ul>
-							</div>
-						</div>
-					</form>
-				</div>
-			</section>
-
-
 		</div>
 
 		<!-- Footer -->
