--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,12 +1,11 @@
 <meta charset="utf-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-<link rel="stylesheet" href="/assets/css/main.css" />
+<link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}" />
 
 {%- seo -%}
 {%- feed_meta -%}
 {%- if jekyll.environment == 'production' and site.google_analytics -%}
-    {%- include google-analytics.html -%}
+  {%- include google-analytics.html -%}
 {%- endif -%}
 
 <!-- Begin Icons, thanks to https://realfavicongenerator.net/ -->
