--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,7 +1,10 @@
-<script src="{{ '/assets/js/jquery.min.js' | relative_url }}"></script>
-<script src="{{ '/assets/js/jquery.scrollex.min.js' | relative_url }}"></script>
-<script src="{{ '/assets/js/jquery.scrolly.min.js' | relative_url }}"></script>
-<script src="{{ '/assets/js/browser.min.js' | relative_url }}"></script>
-<script src="{{ '/assets/js/breakpoints.min.js' | relative_url }}"></script>
-<script src="{{ '/assets/js/util.js' | relative_url }}"></script>
-<script src="{{ '/assets/js/main.js' | relative_url }}"></script>
+<script defer src="{{ '/assets/js/jquery.min.js' | relative_url }}"></script>
+<script defer src="{{ '/assets/js/jquery.scrollex.min.js' | relative_url }}"></script>
+<script defer src="{{ '/assets/js/jquery.scrolly.min.js' | relative_url }}"></script>
+<script defer src="{{ '/assets/js/browser.min.js' | relative_url }}"></script>
+<script defer src="{{ '/assets/js/breakpoints.min.js' | relative_url }}"></script>
+<script defer src="{{ '/assets/js/util.js' | relative_url }}"></script>
+<script defer src="{{ '/assets/js/main.js' | relative_url }}"></script>
+<script defer src="{{ '/assets/js/brands.min.js' | relative_url }}"></script>
+<script defer src="{{ '/assets/js/solid.min.js' | relative_url }}"></script>
+<script defer src="{{ '/assets/js/fontawesome.min.js' | relative_url }}"></script>
