--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -21,8 +21,8 @@
 
 // Font.
 	$font: (
-		family:				('Lato', sans-serif),
-		family-fixed:		('Source Code Pro', monospace),
+		family:				('Roboto', sans-serif),
+		family-fixed:		('Roboto Mono', monospace),
 		weight:				400,
 		weight-bold:		700
 	);
