--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1511,16 +1511,10 @@
 
 				.toggle {
 					@include icon;
-					height: 44px;
+					height: 4em;
 					position: absolute;
 					top: 0;
-					width: 64px;
-					background: _palette(accent1, bg);
-					color: _palette(accent1, fg-bold) !important;
-					display: block;
-					font-size: 18px;
-					line-height: 44px;
-					text-align: center;
+					width: 6em;
 					border: 0;
 					outline: 0;
 
@@ -1529,6 +1523,26 @@
 					}
 					@else {
 						left: 0;
+					}
+
+					div {
+						background: _palette(accent1, bg);
+						color: _palette(accent1, fg-bold);
+						display: block;
+						font-size: 18px;
+						height: 44px;
+						line-height: 44px;
+						position: absolute;
+						text-align: center;
+						top: 0;
+						width: 64px;
+
+						@if _misc(header-side) == 'right' {
+							right: 0;
+						}
+						@else {
+							left: 0;
+						}
 					}
 				}
 			}
