--- a/_includes/icons.html
+++ b/_includes/icons.html
@@ -25,7 +25,7 @@
 {%- endif -%}
 {%- for mst in site.mastodon -%}
   {%- if mst.username and mst.instance -%}
-    <li><a href="https://{{ mst.instance | cgi_escape | escape}}/@{{mst.username}}" class="icon"><span class="fab fa-mastodon" title="{{ mst.instance }}: {{ mst.username | escape }}"></span></a></li>
+    <li><a rel="me" href="https://{{ mst.instance | cgi_escape | escape}}/@{{mst.username}}" class="icon"><span class="fab fa-mastodon" title="{{ mst.instance }}: {{ mst.username | escape }}"></span></a></li>
   {%- endif -%}
 {%- endfor -%}
 {%- if site.twitter_username -%}
