Fixed minor formatting issue.

--- a/_includes/icons.html
+++ b/_includes/icons.html
@@ -15,7 +15,7 @@
   <li><a href="https://bitbucket.org/{{ site.bitbucket_username | cgi_escape | escape }}" class="icon"><span class="fab fa-bitbucket" title="BitBucket: {{ site.bitbucket_username | escape }}"></span></a></li>
 {%- endif -%}
 {%- if site.instagram_username -%}
-  <li><a href="https://www.instagram.com/{{ site.instagram_username | cgi_escape | escape }}" class="icon"><span class="fab fa-instagram" title="Instagram{{ site.instagram_username | escape }}"></span></a></li>
+  <li><a href="https://www.instagram.com/{{ site.instagram_username | cgi_escape | escape }}" class="icon"><span class="fab fa-instagram" title="Instagram: {{ site.instagram_username | escape }}"></span></a></li>
 {%- endif -%}
 {%- if site.linkedin_username -%}
   <li><a href="https://www.linkedin.com/in/{{ site.linkedin_username | cgi_escape | escape }}" class="icon"><span class="fab fa-linkedin" title="LinkedIn: {{ site.linkedin_username | escape }}"></span></a></li>
