Added Matomo Tracking code

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,3 +21,7 @@
 <meta name="msapplication-TileColor" content="#000000">
 <meta name="theme-color" content="#ffffff">
 <!-- End Icons -->
+
+{%- if site.matomo_url -%}
+  {%- include matomo.html -%}
+{%- endif -%}
