--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,6 +4,8 @@
   {%- if my_page.title -%}
     {%- if my_page.url == page.url -%}
       <li><a class="active" href="#top">{{ my_page.title }}</a></li>
+    {%- elsif page.url contains my_page.url and my_page.url != "/" -%}
+      <li><a class="active" href="{{ my_page.url | relative_url }}">{{ my_page.title }}</a></li>
     {%- else -%}
       <li><a href="{{ my_page.url | relative_url }}">{{ my_page.title }}</a></li>
     {%- endif -%}
