--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -20,7 +20,7 @@
               </a>
               <div class="inner">
                 <h4><a href="{{ post.url | relative_url }}">{{ post.title | escape }}</a></h4>
-                {{ post.date | date: date_format }}
+                <div>{{ post.date | date: date_format }}</div>
                 {%- if site.show_excerpts -%}
                   {{ post.excerpt }}
                 {%- endif -%}
