--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,9 @@
 <div class="container">
   <ul class="copyright">
     <li>&copy; {{ site.time | date: "%Y" }} {{ site.title }}</li>
+    {%- if site.page_contact -%}
+      <li><a href="mailto:{{ site.email | escape }}?subject={{ page.title | append: ' | ' | append: site.title | url_encode }}">Contact Me About This Page</a></li>
+    {%- endif -%}
     <!-- PER LICENSE OF THEME: ATTRIBUTION IS REQUIRED, DO NOT REMOVE -->
     <li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
     <li>Jekyll Port: <a href="https://digitaladapt.com">DigitalAdapt</a></li>
