Made posts without images use the full width, stopped having an image tag without url. Posts list on homepage now works the same as other category pages. Getting away from page banners on top of site. Using seo_tag.title instead of generating the same thing by hand.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <ul class="copyright">
     <li>&copy; {{ site.time | date: "%Y" }} {{ site.title }}</li>
     {%- if site.page_contact -%}
-      <li><a href="mailto:{{ site.email | escape }}?subject={{ page.title | append: ' | ' | append: site.title | url_encode }}">Contact Me About This Page</a></li>
+      <li><a href="mailto:{{ site.email | escape }}{%- if seo_tag.title? -%}?subject={{ seo_tag.title | url_encode }}{%- endif -%}">Contact Me About This Page</a></li>
     {%- endif -%}
     <!-- PER LICENSE OF THEME: ATTRIBUTION IS REQUIRED, DO NOT REMOVE -->
     <li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
