--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -14,6 +14,8 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
+@import 'libs/font-face';
+
 // Breakpoints.
 
 	@include breakpoints((
