--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -41,24 +41,24 @@
 		border3-bg:			#eaeaea,
 
 		accent1: (
-			bg:				#28f4af,
-			fg-bold:		#111111,
-			fg:				mix(#28f4af, #111111, 25%),
-			fg-light:		mix(#28f4af, #111111, 40%)
+			bg:				#8cff9b,
+			fg-bold:		#222222,
+			fg:				mix(#8cff9b, #222222, 25%),
+			fg-light:		mix(#8cff9b, #222222, 40%)
 		),
 
 		accent2: (
-			bg:				#111111,
-			fg-bold:		#ffffff,
-			fg:				mix(#111111, #ffffff, 25%),
-			fg-light:		mix(#111111, #ffffff, 40%)
+			bg:				#222222,
+			fg-bold:		#8cff9b,
+			fg:				mix(#222222, #8cff9b, 25%),
+			fg-light:		mix(#222222, #8cff9b, 40%)
 		),
 
 		header: (
-			bg:				#28f4af,
-			fg-bold:		#111111,
-			fg:				mix(#28f4af, #111111, 25%),
-			fg-light:		mix(#28f4af, #111111, 40%),
-			border:			mix(#28f4af, #111111, 90%)
+			bg:				#8cff9b,
+			fg-bold:		#222222,
+			fg:				mix(#8cff9b, #222222, 25%),
+			fg-light:		mix(#8cff9b, #222222, 40%),
+			border:			mix(#8cff9b, #222222, 90%)
 		)
 	);
