--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -29,8 +29,8 @@
 
 // Palette.
 	$palette: (
-		bg:					#fff,
-		fg:					#888,
+		bg:					#222222,
+		fg:					#ffffff,
 		fg-bold:			#777,
 		fg-light:			#aaa,
 		border:				#f4f4f4,
