--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -29,36 +29,36 @@
 
 // Palette.
 	$palette: (
-		bg:					#222222,
-		fg:					#ffffff,
-		fg-bold:			#777,
+		bg:					#121b23,
+		fg:					#eeeeee,
+		fg-bold:			#bbbbbb,
 		fg-light:			#aaa,
-		border:				#f4f4f4,
-		border-bg:			#fafafa,
-		border2:			#e4e4e4,
-		border2-bg:			#f4f4f4,
-		border3:			#e0e0e0,
-		border3-bg:			#eaeaea,
+		border:				#121b23,
+		border-bg:			#22313c,
+		border2:			#121b23,
+		border2-bg:			#22313c,
+		border3:			#121b23,
+		border3-bg:			#22313c,
 
 		accent1: (
 			bg:				#8cff9b,
-			fg-bold:		#222222,
-			fg:				mix(#8cff9b, #222222, 25%),
-			fg-light:		mix(#8cff9b, #222222, 40%)
+			fg-bold:		#121b23,
+			fg:				mix(#8cff9b, #121b23, 25%),
+			fg-light:		mix(#8cff9b, #121b23, 40%)
 		),
 
 		accent2: (
-			bg:				#222222,
+			bg:				#121b23,
 			fg-bold:		#8cff9b,
-			fg:				mix(#222222, #8cff9b, 25%),
-			fg-light:		mix(#222222, #8cff9b, 40%)
+			fg:				mix(#121b23, #8cff9b, 25%),
+			fg-light:		mix(#121b23, #8cff9b, 40%)
 		),
 
 		header: (
 			bg:				#8cff9b,
-			fg-bold:		#222222,
-			fg:				mix(#8cff9b, #222222, 25%),
-			fg-light:		mix(#8cff9b, #222222, 40%),
-			border:			mix(#8cff9b, #222222, 90%)
+			fg-bold:		#121b23,
+			fg:				mix(#8cff9b, #121b23, 25%),
+			fg-light:		mix(#8cff9b, #121b23, 40%),
+			border:			mix(#8cff9b, #121b23, 90%)
 		)
 	);
