--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,14 +11,14 @@
 <!-- Begin Icons, thanks to https://realfavicongenerator.net/ -->
 <link rel="apple-touch-icon" sizes="180x180" href="{{ '/apple-touch-icon.png' | relative_url }}">
 <link rel="icon" type="image/png" sizes="32x32" href="{{ '/favicon-32x32.png' | relative_url }}">
-<link rel="icon" type="image/png" sizes="194x194" href="{{ '/favicon-194x194.png' | relative_url }}">
 <link rel="icon" type="image/png" sizes="192x192" href="{{ '/android-chrome-192x192.png' | relative_url }}">
 <link rel="icon" type="image/png" sizes="16x16" href="{{ '/favicon-16x16.png' | relative_url }}">
 <link rel="manifest" href="{{ '/site.webmanifest' | relative_url }}">
+<link rel="mask-icon" href="{{ '/safari-pinned-tab.svg' | relative_url }}" color="#28f4af">
 <meta name="apple-mobile-web-app-title" content="{{ site.title }}">
 <meta name="application-name" content="{{ site.title }}">
-<meta name="msapplication-TileColor" content="#000000">
-<meta name="theme-color" content="#ffffff">
+<meta name="msapplication-TileColor" content="#28f4af">
+<meta name="theme-color" content="#28f4af">
 <!-- End Icons -->
 
 {%- if site.matomo_url -%}
