Correcting borders to be visible.

--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -33,11 +33,11 @@
 		fg:					#eeeeee,
 		fg-bold:			#bbbbbb,
 		fg-light:			#aaa,
-		border:				#12173d,
+		border:				#464b8c,
 		border-bg:			#464b8c,
-		border2:			#12173d,
+		border2:			#464b8c,
 		border2-bg:			#464b8c,
-		border3:			#12173d,
+		border3:			#464b8c,
 		border3-bg:			#464b8c,
 
 		accent1: (
