--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5" />
 <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}" />
 
 {%- seo -%}
