--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 	Ported to Jekyll by DigitalAdapt.
 -->
-<html>
+<html lang="{{ site.lang | default: 'en' }}">
 <head>
 	{%- include head.html -%}
 </head>
