--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
 
 {%- seo -%}
 {%- feed_meta -%}
-{%- if jekyll.environment == 'production' and site.google_analytics -%}
+{%- if site.google_analytics -%}
   {%- include google-analytics.html -%}
 {%- endif -%}
 
