new color theme.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,11 +14,11 @@
 <link rel="icon" type="image/png" sizes="192x192" href="{{ '/android-chrome-192x192.png' | relative_url }}">
 <link rel="icon" type="image/png" sizes="16x16" href="{{ '/favicon-16x16.png' | relative_url }}">
 <link rel="manifest" href="{{ '/site.webmanifest' | relative_url }}">
-<link rel="mask-icon" href="{{ '/safari-pinned-tab.svg' | relative_url }}" color="#464b8c">
+<link rel="mask-icon" href="{{ '/safari-pinned-tab.svg' | relative_url }}" color="#718BAC">
 <meta name="apple-mobile-web-app-title" content="{{ site.title }}">
 <meta name="application-name" content="{{ site.title }}">
-<meta name="msapplication-TileColor" content="#8cff9b">
-<meta name="theme-color" content="#8cff9b">
+<meta name="msapplication-TileColor" content="#926A9B">
+<meta name="theme-color" content="#926A9B">
 <!-- End Icons -->
 
 {%- if site.matomo_url -%}
