--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1304,7 +1304,7 @@
 	#footer {
 		background: _palette(border-bg);
 		border-top: 0;
-		color: _palette(fg);
+		color: _palette(border-fg);
 		overflow: hidden;
 		padding: 4em 0 2em 0;
 
