--- a/_includes/icons.html
+++ b/_includes/icons.html
@@ -20,6 +20,9 @@
 {%- if site.linkedin_username -%}
   <li><a href="https://www.linkedin.com/in/{{ site.linkedin_username | cgi_escape | escape }}" class="icon"><span class="fab fa-linkedin" title="LinkedIn: {{ site.linkedin_username | escape }}"></span></a></li>
 {%- endif -%}
+{%- if site.reddit_username -%}
+<li><a href="https://www.reddit.com/u/{{ site.reddit_username | cgi_escape | escape }}" class="icon"><span class="fab fa-reddit" title="Reddit: {{ site.reddit_username | escape }}"></span></a></li>
+{%- endif -%}
 {%- if site.pinterest_username -%}
   <li><a href="https://www.pinterest.com/{{ site.pinterest_username | cgi_escape | escape }}" class="icon"><span class="fab fa-pinterest" title="Pinterest: {{ site.pinterest_username | escape }}"></span></a></li>
 {%- endif -%}
