--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -919,13 +919,15 @@
 /* Icons */
 
 	ul.icons {
+        display: flex;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
 		cursor: default;
 		list-style: none;
 		padding-left: 0;
 
 		li {
-			display: inline-block;
-			padding: 0 1em 0 0;
+			padding: 0.6em;
 
 			&:last-child {
 				padding-right: 0 !important;
@@ -938,6 +940,10 @@
 			}
 		}
 	}
+
+    .xxx-large {
+        font-size: xxx-large;
+    }
 
 /* Table */
 
